# Plazer

./: .editorconfig  .gitignore  .graphqlrc.yml  .prettierignore  Cargo.toml  Makefile.toml  README.md  apollo.config.js  package.json  pnpm-lock.yaml  schema.gql  trunk.toml  turbo.json
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/api/: account.rs  mod.rs
crates/cli/src/db/: mod.rs
crates/client/: Cargo.toml
crates/client/src/: account.rs  lib.rs  wasm.rs
crates/common/: Cargo.toml
crates/common/src/: graph.rs  lib.rs
crates/common/src/api/: account.rs  mod.rs
crates/data/: Cargo.toml
crates/data/src/: graph.rs  lib.rs
crates/service/: Cargo.toml
crates/service/src/: account.rs  config.rs  conv.rs  error.rs  lib.rs  macros.rs  main.rs  migration.rs  persist.rs  prelude.rs  query.rs  schema.rs  types.rs
crates/service/src/account/: auth.rs  migration.rs  mod.rs  models.rs  persist.rs  schema.rs
crates/service/src/account/persist/: tests.rs
crates/service/src/board/: migration.rs  mod.rs  models.rs  persist.rs  schema.rs
crates/service/src/board/persist/: tests.rs
crates/service/src/post/: mod.rs  models.rs  persist.rs  schema.rs
crates/service/src/post/persist/: tests.rs
crates/service/src/query/: mod.rs  pagination.rs  srql.rs  update.rs  value.rs
crates/service/src/query/pagination/: test.rs  testing.rs  tests.rs
crates/service/src/schema/: auth.rs  mod.rs
crates/ui/: Cargo.toml  index.html
crates/ui/src/: lib.rs  main.rs
crates/ui/src/api/: account.rs
scripts/: install-build-tools.nu
