[package]
name = "plazer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
plazer_service = { version = "0.1.0", path = "../service", features = [
    "clap",
    "graphiql",
] }
clap = { version = "4.4.3", features = ["cargo", "derive"] }
jsonwebtoken = "8.3.0"
pkcs8 = { version = "0.10.2", features = ["pem"] }
ring = "0.16.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
toml = "0.7.8"
