[package]
name = "plazer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
plazer_service = { version = "0.1.0", path = "../service", features = [
    "clap",
    "graphiql",
] }
clap = { version = "4.4.8", features = ["cargo", "derive"] }
jsonwebtoken = "9.1.0"
pkcs8 = { version = "0.10.2", features = ["pem"] }
ring = "0.17.5"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
toml = "0.8.8"
