[package]
name = "c11ity_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
bincode = { version = "1.3.3", optional = true }
c11ity_common = { version = "0.1.0", path = "../common", features = ["client"] }
cfg-if = { version = "1.0.0", optional = true }
futures = "0.3.25"
getrandom = "0.2.8"
gloo-net = { version = "0.2.4", optional = true }
log = "0.4.17"
serde = "1.0.147"
serde_json = { version = "1.0.89", optional = true }
thiserror = "1.0.37"
wasm-bindgen-futures = { version = "0.4.33", optional = true }

[features]
wasm = [
    "getrandom/js",
    "dep:bincode",
    "dep:cfg-if",
    "dep:gloo-net",
    "dep:wasm-bindgen-futures",
]
wasm-debug = ["dep:serde_json"]
