[package]
name = "plazer_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.4", features = [
    "chrono",
    "secrecy",
], default-features = false }
async-graphql-axum = "6.0.4"
async-stream = "0.3.5"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["headers", "ws"] }
base64 = "0.21.2"
cfg-if = "1.0.0"
chrono = "0.4.26"
futures = "0.3.28"
hyper = "0.14.27"
indoc = "2.0.3"
jsonwebtoken = "8.3.0"
log = "0.4.20"
name-variant = "0.1.0"
nanorand = { version = "0.7.0", default-features = false, features = [
    "wyrand",
    "std",
] }
pkcs8 = { version = "0.10.2", features = ["alloc", "pem"] }
ring = { version = "0.16.20", features = ["alloc"], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.185"
serde_json = "1.0.105"
# This is a workaround due to a cargo bug
# https://github.com/rust-lang/cargo/issues/7180
# TODO: Use crates.io version when beta.10 is released
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9+20230402" }
test-case = "3.1.0"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
typeshare = "1.0.1"

[features]
default = ["backend-mem", "backend-file"]
graphiql = ["async-graphql/graphiql"]
backend-mem = ["surrealdb/kv-mem"]
backend-file = ["surrealdb/kv-rocksdb"]
# Disabled at the moment due to CI build issues.
# backend-tikv = ["surrealdb/kv-tikv"]
