[package]
name = "plazer_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.11", features = [
    "chrono",
    "secrecy",
], default-features = false }
async-graphql-axum = "6.0.11"
async-stream = "0.3.5"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["headers", "ws"] }
base64 = "0.21.5"
cfg-if = "1.0.0"
chrono = "0.4.31"
clap = { version = "4.4.8", optional = true }
futures = "0.3.29"
hyper = "0.14.27"
jsonwebtoken = "9.1.0"
log = "0.4.20"
name-variant = "0.1.0"
nanorand = { version = "0.7.0", features = [
    "wyrand",
    "std",
], default-features = false }
pkcs8 = { version = "0.10.2", features = ["alloc", "pem"] }
ring = { version = "0.17.5", features = ["alloc"], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.192"
serde_json = "1.0.108"
surrealdb = { version = "1.0.0", features = [
    "rustls",
], default-features = false }
test-case = "3.3.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
typeshare = "1.0.1"
ulid = "1.1.0"

[features]
default = ["backend-mem", "backend-file"]
graphiql = ["async-graphql/graphiql"]
clap = ["dep:clap"]
backend-ws = ["surrealdb/protocol-ws"]
backend-mem = ["surrealdb/kv-mem"]
backend-file = ["surrealdb/kv-rocksdb"]
# Disabled at the moment due to CI build issues.
# backend-tikv = ["surrealdb/kv-tikv"]

[dev-dependencies]
pretty_assertions = "1.4.0"
