[package]
name = "c11ity_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c11ity_client = { version = "0.1.0", path = "../client" }
c11ity_common = { version = "0.1.0", path = "../common", features = ["client"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "0.2.0", optional = true }
gloo-net = { version = "0.2.4", optional = true }
gloo-utils = { version = "0.1.5", optional = true }
log = "0.4.17"
serde = "1.0.147"
sycamore = { version = "0.8.2", features = ["hydrate", "serde", "suspense"] }
sycamore-router = "0.8.0"

[features]
default = ["client"]
client = [
    "c11ity_client/wasm",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:gloo-net",
    "dep:gloo-utils",
]
server = ["sycamore/ssr"]
